att machine-learning file

--- a/machine-learning/machine-learning.ipynb
+++ b/machine-learning/machine-learning.ipynb
@@ -111,12 +111,30 @@
     "    ![Ilustração teste permutação](perm_orig.png \"Teste de permutação: configuração original\")\n",
     "\n",
     "    \n",
-    "    ![Ilustração teste permutação](perm_perm.png \"Teste de permutação: configuração permutada\")"
+    "    ![Ilustração teste permutação](perm_perm.png \"Teste de permutação: configuração permutada\")\n",
+    "\n",
+    "#### Ajuste de Hiper Parâmetros:\n",
+    "\n",
+    "- Um modelo por si só é bom, mas podemos fazer ajustes finos neles que podem mudar completamente oque eles nos dizem geralmente simplesmente otimizamos o melhor modelo encotrado com o objetivo de maximizar seu desempenho esses ajustes vem com o multiplicador das features. Isso pode melhorar significantemente o nosso modelo existem formas de fazer isso por meio de calculos em alguns modelos porém em sua maioria temos que testar eles manualmente \"BRUTE FORCE\" gridSearch para testar um conjunto de hiperparamentros e ver quais desempenham melhor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "\n",
+    "**Funções Relevantes**\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +190,6 @@
     "\n",
     "Ambas correlações são correlações alternativas para a correlação de Pearson quando a obrigações da mesma não são atendidas, elas sendo serem uma correlação entre uma variável dependente e cada uma das variáveis independentes e serem linearmente dependentes."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
